--- a/cities.html
+++ b/cities.html
@@ -30,6 +30,7 @@
     <li>Karachi  (12,991,000)</li>
     <li>Mumbai   (12,478,447)</li>
     <li>Cairo    (9,540,447)</li>
+    <li>alexandria    (2,540,447)</li>
   </ol>
 
 </body>
