--- a/cities.html
+++ b/cities.html
@@ -22,7 +22,7 @@
   <hr/>
 
   <ol>
-
+    <li>Vancouver (2)</li>
     <li>Toronto (6,900,000)</li>
     <li>Montreal (1,780,000)</li>
     <li>Shanghai (17,836,133)</li>
